<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="app_name">PRemoteDroid</string>
	<string
		name="text_keyboard">Keyboard</string>
	<string
		name="text_settings">Settings</string>
	<string
		name="text_get_server">Get server</string>
	<string
		name="text_help">Help</string>
	<string
		name="text_file_explorer">File explorer</string>
	<string
		name="text_refresh">Refresh</string>
	<string
		name="text_explore_roots">Explore root(s)</string>
	<string
		name="text_help_description">Description :</string>
	<string
		name="text_help_usage">Usage :</string>
	<string
		name="text_help_install">Install :</string>
	<string
		name="text_help_contact">Contact :</string>
	<string
		name="text_help_description_content">Use your phone as a remote control device for your computer over Wifi and Bluetooth !\n\nMain features :\n - Mouse control (move, click and wheel)\n - Keyboard control\n - File explorer (view directories and launch files)\n - Secure (password) connection\n - Screen capture (but it is NOT a VNC viewer)\n</string>
	<string
		name="text_help_install_content">Download the server on :\nhttp://www.premotedroid.com\n</string>
	<string
		name="text_help_usage_content">Press, drag and hold the screen to move the mouse.\n\nTo click, just press briefly the screen.\n\nTo hold your click, press and hold the screen (do not move!).\nAfter the vibration, you can move.\nTo release your click, do a simple click.\n\nManual click buttons are available around the screen.\nHold a button one second, and it will stay pressed.\n\nTo use the mouse wheel, slide the right part of the screen (up and down).\n</string>
	<string
		name="text_help_contact_content">Website : http://www.premotedroid.com\nGroup / forum : http://group.premotedroid.com\nTwitter : @premotedroid\nEmail : pierredurand@gmail.com (dev)</string>
	<string
		name="text_connection">Connection</string>
	<string
		name="text_connections">Connections</string>
	<string
		name="text_control">Control</string>
	<string
		name="text_advanced_control">Advanced control</string>
	<string
		name="text_sensitivity">Sensitivity</string>
	<string
		name="text_acceleration">Acceleration</string>
	<string
		name="text_buttons_size">Buttons size</string>
	<string
		name="text_wheel_bar_width">Wheel bar width</string>
	<string
		name="text_click_delay">Click delay</string>
	<string
		name="text_hold_delay">Hold delay</string>
	<string
		name="text_immobile_distance">Immobile distance</string>
	<string
		name="text_feedback">Feedback</string>
	<string
		name="text_sound">Sound</string>
	<string
		name="text_vibration">Vibration</string>
	<string
		name="text_screen_capture">Screen capture</string>
	<string
		name="text_advanced_screen_capture">Advanced screen capture</string>
	<string
		name="text_capture_enabled">Capture enabled</string>
	<string
		name="text_capture_format">Capture format</string>
	<string-array
		name="screenCapture_format_id">
		<item>jpg</item>
		<item>png</item>
	</string-array>
	<string-array
		name="screenCapture_format_name">
		<item>JPG</item>
		<item>PNG</item>
	</string-array>
	<string
		name="text_cursor_enabled">Cursor enabled</string>
	<string
		name="text_cursor_size">Cursor size</string>
	<string
		name="text_miscellaneous">Miscellaneous</string>
	<string
		name="text_fullscreen">Fullscreen</string>
	<string
		name="text_keep_screen_on">Keep screen on</string>
	<string
		name="text_debug">Debug</string>
	<string
		name="text_first_run">First run</string>
	<string
		name="text_reset_preferences">Reset preferences</string>
	<string
		name="text_connection_established">Connection established</string>
	<string
		name="text_connection_closed">Connection closed</string>
	<string
		name="text_connection_refused">Connection refused</string>
	<string
		name="text_illegal_connection_parameter">Illegal connection parameter</string>
	<string
		name="text_authentificated">Authentificated</string>
	<string
		name="text_not_authentificated">Not authentificated (wrong password)</string>
	<string
		name="text_bluetooth_not_available_version">Bluetooth is not available on your phone (only Android 2.0+)</string>
	<string
		name="text_bluetooth_not_available">Bluetooth is not available</string>
	<string
		name="text_bluetooth_not_enabled">Bluetooth is not enabled</string>
	<string
		name="text_bluetooth_remote_device_not_found">Remote bluetooth device not found</string>
	<string
		name="text_bluetooth_can_not_connect">Can not connect to remote bluetooth device</string>
	<string
		name="text_first_run_dialog">It is the first time you launch PRemoteDroid.\nDo you want to read the help?</string>
	<string
		name="text_new_version_dialog">It is a new version of PRemoteDroid.\nYou should download the server again on :\nhttp://www.premotedroid.com</string>
	<string
		name="text_no_connection">No connection\nPress the \"Menu\" button to add a new one</string>
	<string
		name="text_no_connection_selected">No connection selected\nPress the \"Menu\" button\nSelect \"Connections\"</string>
	<string
		name="text_bluetooth_discovery_started">Bluetooth discovery started</string>
	<string
		name="text_bluetooth_discovery_finished">Bluetooth discovery finished</string>
	<string
		name="text_bluetooth_device_not_paired">Bluetooth device not paired\nYou should pair it manually</string>
	<string
		name="text_yes">Yes</string>
	<string
		name="text_no">No</string>
	<string
		name="text_ok">Ok</string>
	<string
		name="text_new">New</string>
	<string
		name="text_connection_type">Connection type</string>
	<string-array
		name="connection_action_name">
		<item>Use</item>
		<item>Edit</item>
		<item>Remove</item>
	</string-array>
	<string
		name="text_wifi">Wifi</string>
	<string
		name="text_bluetooth">Bluetooth</string>
	<string
		name="text_bluetooth_devices">Bluetooth devices</string>
	<string
		name="text_name">Name : </string>
	<string
		name="text_password">Password : </string>
	<string
		name="text_host">Host : </string>
	<string
		name="text_port">Port : </string>
	<string
		name="text_address">Address : </string>
	<string
		name="text_save">Save</string>
	<string
		name="text_new_connection">New connection</string>
	<string
		name="text_hint_host">192.168.x.x</string>
<string name="text_UI_Main_Menu_UISelection">Select User Interface</string>
<string name="text_UI_Main_Menu_Title">uMote Main Menu</string>
<string name="text_UI_Main_Menu_UICreation">Create New User Interface</string>
<string name="text_UI_Main_Menu_UIEdit">Edit User Interface</string>
<string name="text_UI_Main_Menu_UIHelp">Help</string>
<string name="text_UI_Help_Description">Description:</string>
<string name="text_UI_Help_Description_Content">Welcome to uMote! An application that allows you to both use and create your own remote control interfaces for use with computer programs. </string>
<string name="text_UI_Help_Usage">Usage:</string>
<string name="text_UI_Help_Usage_Content">First, using pRemoteDroid’s mouse control, open a program you want to remotely control. Then click anywhere in that open program to have your computer recognize it as the currently active program.\n\n Hit your menu button on your smartphone and select the ‘UI Menu’ button. From the main menu you have three options.\n\n   1. Select a remote control User Interface that you have previously created.\n   2. Create a new user interface.\n   3. Edit a previously saved remote control User Interface\n\n When you use option 1 the selected remote control User Interface will come up which allows for your smartphone to be used in the same way one would use a TV remote control.\n\n To exit, just hit the menu button on your smartphone and select ‘Exit to mousepad’ which will bring you back to the default pRemoteDroid mousepad screen. </string>

<string name="text_UI_Main_Help_Title">uMote Help</string>

<string name="text_UI_Key_Binding">Key Binding</string>
</resources>