<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="20dip">
	<Button android:id="@+id/UI_Selection_Button"
		android:layout_marginBottom="20dip"
		android:layout_height="70dip" 
		android:layout_width="fill_parent"
		android:text="@string/text_UI_Main_Menu_UISelection" android:onClick="UISelection"
		android:layout_centerHorizontal="true"
		android:textSize="20dip"/>
	<Button android:id="@+id/UI_Creation_Button"
		android:layout_marginBottom="20dip"
		android:layout_height="70dip" 
		android:layout_width="fill_parent"
		android:text="@string/text_UI_Main_Menu_UICreation" android:onClick="UICreation"
		android:layout_below="@+id/UI_Selection_Button"
		android:textSize="20dip"/>
	<Button android:id="@+id/UI_Edit_Button" 
		android:layout_marginBottom="50dip"
		android:layout_height="70dip"
		android:layout_width="fill_parent" android:text="@string/text_UI_Main_Menu_UIEdit"
		android:layout_below="@+id/UI_Creation_Button" 
		android:textSize="20dip"/>
	<Button android:id="@+id/UI_Help_Button" android:layout_height="70dip"
		android:layout_width="fill_parent" android:text="@string/text_UI_Main_Menu_UIHelp"
		android:onClick="UIHelp" 
		android:layout_below="@+id/UI_Edit_Button"
		android:textSize="20dip"/>

</RelativeLayout>
